third_party/WebKit/Source/core/layout/LayoutView.cpp
@@ -216,6 +216,10 @@ bool LayoutView::CanHaveChildren() const {
     return true;
   if (!RuntimeEnabledFeatures::DisplayNoneIFrameCreatesNoLayoutObjectEnabled())
     return true;
+  // Although it is not spec compliant, many websites intentionally call
+  // Window.print() on display:none iframes. https://crbug.com/819327.
+  if (GetDocument().Printing())
+    return true;
   // A PluginDocument needs a layout tree during loading, even if it is inside a
   // display: none iframe.  This is because WebLocalFrameImpl::DidFinish expects
   // the PluginDocument's <embed> element to have an EmbeddedContentView, which
